


=== Unterstützung der japanischen Sprache

Die BlueXP -Benutzeroberfläche ist jetzt in japanischer Sprache verfügbar.  Wenn Ihre Browsersprache Japanisch ist, wird BlueXP auf Japanisch angezeigt.  Um auf die Dokumentation auf Japanisch zuzugreifen, verwenden Sie das Sprachmenü auf der Dokumentationswebsite.



=== Identitäts- und Zugriffsmanagement (BlueXP , IAM)

Das Identitäts- und Zugriffsmanagement in BlueXP bietet jetzt die folgende Funktion.



=== Neue Zugriffsrolle für den operativen Support

BlueXP unterstützt jetzt die Rolle eines Betriebssupportanalysten.  Diese Rolle erteilt einem Benutzer die Berechtigung, Speicherwarnungen zu überwachen, die BlueXP Audit-Zeitleiste anzuzeigen und NetApp Supportfälle einzugeben und zu verfolgen.

link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Erfahren Sie mehr über die Verwendung von Zugriffsrollen."]



== 31. Juli 2025



=== Freigabe des Privatmodus (3.9.54)

Eine neue Version für den privaten Modus steht jetzt zum Herunterladen von zur Verfügung https://mysupport.netapp.com/site/downloads["NetApp Support Website"^]

Die Version 3.9.54 enthält Updates für die folgenden BlueXP Komponenten und -Dienste.

[cols="3*"]
|===
| Komponente oder Dienst | In dieser Version enthaltene Version | Änderungen seit der letzten privaten Modus-Freigabe 


| Stecker | 3.9.54, 3.9.53 | Gehen Sie zum https://docs.netapp.com/us-en/bluexp-setup-admin/whats-new.html#connector-3-9-50["Was gibt es Neues auf der BlueXP -Seite?"^] und beziehen Sie sich auf die Änderungen, die in den Versionen 3.9.54 und 3.9.53 enthalten sind. 


| Backup und Recovery | 28. Juli 2025 | Gehen Sie zum https://docs.netapp.com/us-en/bluexp-backup-recovery/whats-new.html["Was ist neu auf der Backup- und Recovery-Seite von BlueXP"^] und beziehen Sie sich auf die Änderungen, die in der Version vom Juli 2025 enthalten sind. 

