@@ -3571,8 +3571,6 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="c7b1fe992423d57d0e492585ff631c02" category="list-text">Schützen Sie lokale VMware-Workloads mit VMware Cloud on Amazon FSX for ONTAP als Disaster-Recovery-Standort.</block>
   <block id="71bd4794c020a7645a4cfe74173f4058" category="list-text">Wirtschaftliche Effizienz von BlueXP</block>
   <block id="068ff21264880d35ad4153fad90e3828" category="list-text">Identifizieren Sie Cluster mit aktueller oder prognostizierter niedriger Kapazität und implementieren Sie Daten-Tiering oder zusätzliche Kapazitätsempfehlungen.</block>
-  <block id="dd7c710b103a018a2046baa2f5052ed9" category="list-text">Operative Ausfallsicherheit von BlueXP</block>
-  <block id="00ac035a0893138aed2f04da8c8223d3" category="list-text">Implementieren Sie automatische Risikobehebungen für Firmware- und Software-Konfigurationen, um den Zustand der ONTAP-Cluster aufrechtzuerhalten.</block>
   <block id="67ecb6c0a19888100e5352d06f886856" category="list-text">BlueXP vor Ransomware-Schutz</block>
   <block id="a8dd42d088a97f32bf9a4c69abc2517a" category="list-text">Erkennen Sie Anomalien, die möglicherweise zu Ransomware-Angriffen führen. Schutz und Recovery von Workloads</block>
   <block id="3ffe2e9dffcfea6ba0652c1f11e54fc1" category="list-text">BlueXP Replizierung</block>
@@ -3827,7 +3825,6 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="da48a166a29b8e248a3113d9bd6cba04" category="paragraph">Zum Hinzufügen einer Lizenz zur digitalen Brieftasche ist nur ein Connector erforderlich, wenn Cloud Volumes ONTAP _Node-based_ Lizenzen verwendet werden. In diesem Fall ist ein Connector erforderlich, da die Daten aus den auf Cloud Volumes ONTAP-Systemen installierten Lizenzen stammen.</block>
   <block id="bf2f35a1367a7ddb519a7dd3cedacfdd" category="paragraph">Wenn Sie BlueXP im Standardmodus verwenden, ist für die folgenden Funktionen und Services in BlueXP ein Connector erforderlich:</block>
   <block id="c7a576f5db262c0475afa4a53822979e" category="list-text">Wirtschaftliche Effizienz ^1^</block>
-  <block id="7713949d8f17ff00f9cdb21469da8a35" category="list-text">Ausfallsicherheit der Betriebsabläufe ^1^</block>
   <block id="6d95cfc501ca88bca8a0045681608071" category="paragraph">^1^ während Sie ohne Connector auf diese Dienste zugreifen können, ist ein Connector erforderlich, um Aktionen von den Diensten zu initiieren.</block>
   <block id="ca61c00bb942882ff64e228d1e677f97" category="paragraph">Ein Connector ist erforderlich, um BlueXP im eingeschränkten Modus oder im privaten Modus zu verwenden.</block>
   <block id="dd42f0ca79b192af5e1f5734b490f194" category="paragraph">Anschlüsse sind ein grundlegender Bestandteil der Service-Architektur von BlueXP. Es liegt in Ihrer Verantwortung sicherzustellen, dass die entsprechenden Steckverbinder jederzeit betriebsbereit und zugänglich sind. Während der Service darauf ausgelegt ist, kurze Ausfälle der Connector-Verfügbarkeit zu überwinden, müssen Sie bei Bedarf sofort Maßnahmen ergreifen, um Infrastrukturausfälle zu beheben.</block>
@@ -4004,10 +4001,6 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="34153016d27f6bc08ca28afe350597f0" category="cell">Anzeigen von Aktualisierungsdetails für ein Cluster</block>
   <block id="b9632e5402da95a15f8096dffe8fe849" category="cell">Führen Sie Prüfungen vor dem Update durch, und laden Sie den Upgrade-Plan herunter</block>
   <block id="26c438938da81386c731f3d387eda803" category="cell">Installieren Sie Softwareupdates</block>
-  <block id="faf3b0fdd74f34bfe5b5e712fd212952" category="cell">*Ausfallsicherheit im Betrieb*</block>
-  <block id="71dfe4aa697335a7f919f97a8273c0b2" category="cell">Überprüfen Sie Sicherheitsrisiken</block>
-  <block id="0416203226164e8fc52087494d33b58d" category="cell">Ansible Playbooks herunterladen</block>
-  <block id="55ecbcc86c1df8e0bbccc58434b65675" category="cell">Automatische Behebung von Fehlern</block>
   <block id="c7c10204d64df7a89f6234e58c752612" category="cell">*Wirtschaftliche Effizienz*</block>
   <block id="2dcdbb99022cfb6c4ef2bd327930b9d0" category="cell">Überprüfen Sie den Kapazitätsplanungsstatus</block>
   <block id="a9857843d1ca1e121ff59133f171d8cf" category="cell">Nächste Aktion auswählen (Best Practice, Stufe)</block>
@@ -5007,4 +5000,6 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="a99608db4d85374403174f1119cac088" category="list-text">Bewegen Sie den Schieberegler *Dunkles Design*, um es zu aktivieren.</block>
   <block id="b9d888f58b09c4007db0247286e392b5" category="section-title">11. August 2025</block>
   <block id="107d607a0fbcdbb5eddd688662ad90ca" category="sidebar">Betriebsunterstützungsanalyst</block>
+  <block id="63c109031bd5690629b7c9170bf3f4e8" category="section-title">Funktion zur betrieblichen Ausfallsicherheit</block>
+  <block id="873883e64c5f2d509253776eb02b66b4" category="paragraph">Die Funktion „Betriebsstabilität“ wurde aus BlueXP entfernt.  Wenden Sie sich bei Problemen an den NetApp -Support.</block>
 </blocks>
